# OpenToDoApp

./: .gitignore  README.md  deploy.sh  docker-compose.yml  run-dev.sh  run_poc.sh
.github/workflows/: deploy.yml
android/: .gitignore  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
backend/: .gitignore  Cargo.toml  Dockerfile  curl.http  go.mod  main.go
backend-go/: README.md  go.mod
backend/nodejs/: index.js  package-lock.json  package.json
backend/src/: main.rs
backend/src/api/: routes.rs
backend/src/application/: sync.rs
backend/src/domain/: event.rs  list.rs  mod.rs  task.rs
backend/src/infrastructure/: db.rs
backend/src/models/: task.rs
backend/src/routes/: mod.rs  todos.rs
backend/src/state/: app_state.rs
client-web/vite-project/: package-lock.json
core-rust/: Cargo.toml  README.md
core-rust/src/: lib.rs
docs/: architecture.md  deployment_lan.md  design_steps.md  domain.md  requirements.md
docs/decisions/: ADR-XXX-backend.md
frontend/: .eslintrc.json  Cargo.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json
frontend/react_js/: app.json  package-lock.json  package.json
frontend/src/: App copy.tsx  App.tsx  api.rs  app.rs  main.rs  models.rs  server.rs
my-app/: package.json  pnpm-lock.yaml
rust-core/: Cargo.toml
rust-core/src/: lib.rs
todo-app/: package-lock.json
todo-app/src/: index.css
todo-vue/: index.html  package-lock.json  package.json
web/: .env.development  .env.production  .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.js
(+67 files in other folders)
